test/libsolidity/syntaxTests/enums/global_enum_name_clash.sol
enum E { A }
enum E { A }
// ----
// DeclarationError 2333: (13-25): Identifier already declared.
